<resources>
    <string name="app_name">Morse Encoder</string>

    <string name="button_send_play">Play</string>
    <string name="button_send_stop">Stop</string>
    <string name="button_translate">Translate</string>

    <string name="permlab_flashlight">Flashlight</string>
    <string name="permdesc_flashlight">Uses camera flashlight</string>

    <string name="button_repeat">Repeat</string>

    <string name="text_field_hint">Enter your message here</string>
    <string name="text_view_hint">Translated message</string>

    <string name="radio_group_label">Select method to play message:</string>
    <string name="radio_light">Flash</string>
    <string name="radio_vib">Vibrate</string>
    <string name="radio_beep">Speaker</string>

    <string-array name="morse_code">
        <item>\ |\n</item>
        <item>\n|\n</item>
        <item>a|.-</item>
        <item>b|-...</item>
        <item>c|-.-.</item>
        <item>d|-..</item>
        <item>e|.</item>
        <item>f|..-.</item>
        <item>g|--.</item>
        <item>h|....</item>
        <item>i|..</item>
        <item>j|.---</item>
        <item>k|-.-</item>
        <item>l|.-..</item>
        <item>m|--</item>
        <item>n|-.</item>
        <item>o|---</item>
        <item>p|.--.</item>
        <item>q|--.-</item>
        <item>r|.-.</item>
        <item>s|...</item>
        <item>t|-</item>
        <item>u|..-</item>
        <item>v|...-</item>
        <item>w|.--</item>
        <item>x|-..-</item>
        <item>y|-.--</item>
        <item>z|--..</item>
        <item>0|-----</item>
        <item>1|.----</item>
        <item>2|..---</item>
        <item>3|...--</item>
        <item>4|....-</item>
        <item>5|.....</item>
        <item>6|-....</item>
        <item>7|--...</item>
        <item>8|---..</item>
        <item>9|----.</item>
        <item>.|.-.-.-</item>
        <item>,|--..--</item>
        <item>:|---...</item>
        <item>\?|..--..</item>
        <item>\'|.----.</item>
        <item>-|-....-</item>
        <item>/|-..-.</item>
        <item>(|-.--.-</item>
        <item>)|-.--.-</item>
        <item>\"|.-..-.</item>
        <item>\@|.--.-.</item>
        <item>=|-...-</item>
    </string-array>
</resources>
