<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutWrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="MainActivity">

    <View
        android:id="@+id/blackWhiteView"
        android:layout_width="fill_parent"
        android:layout_height="235dp"
        android:layout_gravity="center_horizontal|top"
        android:focusableInTouchMode="true"
        android:gravity="top"
        android:hint="" />

    <EditText
        android:id="@+id/inputText"
        android:layout_width="fill_parent"
        android:layout_height="83dp"
        android:layout_gravity="center_horizontal|top"
        android:focusableInTouchMode="true"
        android:gravity="top"
        android:hint="@string/text_field_hint"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/output_select_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_group_label"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/output_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/output_radio_light"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:onClick="setSendClickable"
            android:text="@string/radio_light"
            android:textSize="18sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/translate_button"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:clickable="true"
            android:focusable="true"
            android:onClick="onClickTranslateInput"
            android:text="@string/button_translate" />

        <CheckBox
            android:id="@+id/button_repeat"
            android:layout_width="99dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/button_repeat"
            android:textSize="18sp" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:clickable="false"
            android:onClick="onClickOutputMorse"
            android:text="@string/button_send_play" />
    </LinearLayout>

    <TextView
        android:id="@+id/message_display"
        android:layout_width="match_parent"
        android:layout_height="199dp"
        android:layout_gravity="center_horizontal|bottom"
        android:hint="@string/text_view_hint"
        android:textIsSelectable="true"
        android:textSize="18sp" />


</LinearLayout>
